# elastic_cgra_mapper

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt
benchmark/: README.md
benchmark/GenMap/: af.dot  sepia.dot  sf.dot
benchmark/converter/: cgra-bench_converter.py  dfg.py  revamp_kernel_converter.py
cmake/: FindGurobi.cmake
common/logging/: CMakeLists.txt
common/logging/include/common/logging/: debug_logger.hpp
data/: mapper_config.json
docs/: usage.md
entity/: CTestTestfile.cmake  cmake_install.cmake
entity/src/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  database.cpp  dfg.cpp  graph.cpp  mapping.cpp  mrrg.cpp  operation.cpp
environment/: Dockerfile  docker-compose.yaml
example/: verilator_test.cpp
experiment_runner/: create_database.py  mapping_runner.py  remapper_runner.py  utilization_comparison_runner.py
io/: CTestTestfile.cmake  cmake_install.cmake
io/src/: CMakeLists.txt  CTestTestfile.cmake  architecture_io.cpp  cmake_install.cmake  dfg_io.cpp  mapper_config_io.cpp  mapping_io.cpp  output_to_log_file.cpp  select_database.cpp
license_files/: gurobi.lic
mapper/: CTestTestfile.cmake  README.md  cmake_install.cmake
mapper/src/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  connectivity_based_ilp_mapper.cpp  gurobi_ilp_mapper.cpp  gurobi_mapper.cpp  gurobi_mapper_new.cpp  gurobi_placement_ilp_mapper.cpp  gurobi_placement_mapper.cpp  gurobi_routing_mapper.cpp  mapper.cpp  mapper_factory.cpp  mapper_registry.cpp  placement_first_heuristic_mapper.cpp
mapper/src/common/: placement_search_engine.cpp
mapper/src/common/search/: README.md  engine.cpp  engine_internal.hpp  placement_search_engine.cpp  placement_search_engine_internal.hpp  placement_search_engine_options.cpp  placement_search_engine_prisa.cpp  placement_search_engine_quality.cpp  placement_search_engine_resources.cpp  placement_search_engine_routing.cpp  placement_search_engine_sa.cpp  placement_search_engine_traversal.cpp
mapper/src/common/search/algorithms/: prisa.cpp  prisa_initial.cpp  prisa_moves.cpp  prisa_refinement.cpp  sa.cpp  traversal.cpp  traversal_placement.cpp  traversal_plan.cpp
mapper/src/common/search/support/: context_assignment.cpp  options.cpp  quality.cpp  resources.cpp  routing.cpp
mapper/src/modulo/: README.md  connectivity_path_ilp_mapper.cpp  full_routing_ilp_mapper.cpp  modulo_placement_first_mapper.cpp  modulo_prisa_mapper.cpp  modulo_sa_mapper.cpp  modulo_search_engine.cpp  modulo_yoto_mapper.cpp  modulo_yoto_with_fallback_mapper.cpp  modulo_yott_mapper.cpp  modulo_yott_with_fallback_mapper.cpp
mapper/src/placement2d/: README.md  placement2d_array_engine.cpp  placement2d_array_mapper_base.cpp  placement2d_array_mappers.cpp  placement2d_ilp_mapper.cpp  placement2d_prisa_mapper.cpp  placement2d_sa_mapper.cpp  placement2d_search_engine.cpp  placement2d_search_mapper_base.cpp  placement2d_yoto_mapper.cpp  placement2d_yott_mapper.cpp  placement_only_ilp_mapper.cpp
mapper/src/placement2d/engine/: README.md  array_engine.cpp  array_engine_internal.hpp  array_engine_types.hpp  placement2d_array_engine.cpp  placement2d_array_engine_cache.cpp  placement2d_array_engine_cpu_mapping.cpp  placement2d_array_engine_faithful_traversal.cpp  placement2d_array_engine_internal.hpp  placement2d_array_engine_options.cpp  placement2d_array_engine_prisa.cpp  placement2d_array_engine_quality.cpp  placement2d_array_engine_sa.cpp
mapper/src/placement2d/engine/algorithms/prisa/: initial_placement.cpp  moves.cpp  refinement.cpp
mapper/src/placement2d/engine/algorithms/sa/: sa.cpp
mapper/src/placement2d/engine/algorithms/yoto_yott/: cpu_mapping.cpp  cpu_mapping_candidates.cpp  cpu_mapping_plan.cpp  paper_guided.cpp  traversal_order.cpp  yott_core.cpp  yott_core_profile_repair.cpp  yott_core_repair.cpp  yott_core_repair_candidates.cpp  yott_core_repair_objective.cpp
mapper/src/placement2d/engine/support/: cache.cpp  options.cpp  quality.cpp  traversal.cpp
python_tools/: README.md
remapper/src/: CMakeLists.txt  algorithm_entity.cpp  combination_counter.cpp  dp_elastic_remapper.cpp  full_search_elastic_remapper.cpp  greedy_elastic_remapper.cpp  mapping_concater.cpp  mapping_transform_op.cpp  remapper.cpp  remapping_manager.cpp  rotater.cpp  transform.cpp
remapper/src/algorithm/: dp_and_full_search_elastic_remapper.cpp  dp_elastic_remapper.cpp  dp_remapper.cpp  full_search_elastic_remapper.cpp  full_search_remapper.cpp  greedy_elastic_remapper.cpp  greedy_remapper.cpp
remapper/test/: CMakeLists.txt  remapper_test.cpp
remapper/test/data/database/: .gitignore  mapping_a.json  mapping_b.json
research/: README.md
scripts/: analyze.sh  build.sh  build_vpr.sh  debug_remapper_experiment.sh  exec_mapping_experiment.sh  exec_remapper_experiment.sh  remapping.sh  test.sh
simulator/: CMakeLists.txt
simulator/cpp/src/: CGRA.cpp  CMakeLists.txt  PE.cpp  elastic_CGRA.cpp  elastic_PE.cpp  memory.cpp
simulator/verilog/test/: CMakeLists.txt  verilog_data_memory_test.cpp  verilog_elastic_PE_test.cpp  verilog_elastic_alu_test.cpp  verilog_elastic_buffer_test.cpp  verilog_elastic_fork_test.cpp  verilog_elastic_join_test.cpp  verilog_elastic_multiplexer_test.cpp  verilog_synchronous_CGRA_test.cpp  verilog_synchronous_PE_test.cpp
simulator/verilog/test/data/: 4x4_default_cgra.json  4x4_elastic_cgra.json  default_mapping.json  elastic_mapping.json  matrixmultipy_const.dot
src/: bulk_mapping.cpp  create_database.cpp  elastic_remapping.cpp  main.cpp  mapping.cpp  measure_parallel_perf.cpp  placement_mapping.cpp  remapping.cpp  routing_mapping.cpp  verilator_elastic_CGRA.cpp  verilator_synchronous_CGRA.cpp
visualizer/: json_reader.py  load_remapper_config.py  load_result_from_csv.py  mapping.py  mapping_log_reader.py  mapping_visualize_main.py  output_mapping_result_to_csv.py  parallel_measurement_plotter.py  plot_compare_benchmark.py  plot_compare_cgra_size.py  plot_remapper_bench_mark.py  plot_remapper_result.py  remapping_log_reader.py  visualizer.py
(+497 files in other folders)
